@@ -66,9 +66,9 @@
 <span metal:use-macro="container/Zuite_viewTestMacroLibrary/macros/login_as_functional_test_user">Login As Functional Test User</span>\n
 \n
 <tr>\n
-  <td>clickAndWait</td>\n
-  <td>link=Persons</td>\n
-  <td></td>\n
+  <td>selectAndWait</td>\n
+  <td>//select[@name="select_module"]</td>\n
+  <td>Persons</td>\n
 </tr>\n
 <tal:block tal:content="structure python: here.Zuite_generateListboxBrowsing(listbox_selection=([\'title\', here.Zuite_getHowToInfo()[\'incoming_event_howto_person_title\']],), enter_object=True)"/>\n
 <tr>\n
@@ -218,9 +218,9 @@
   <td></td>\n
 </tr>\n
 <tr>\n
-  <td>clickAndWait</td>\n
-  <td>link=Events</td>\n
-  <td></td>\n
+  <td>selectAndWait</td>\n
+  <td>//select[@name="select_module"]</td>\n
+  <td>Events</td>\n
 </tr>\n
 <tr>\n
   <td>verifyText</td>\n
@@ -326,10 +326,11 @@
   <td></td>\n
 </tr>\n
 <tr>\n
-  <td>clickAndWait</td>\n
-  <td>link=Support Requests</td>\n
-  <td></td>\n
+  <td>selectAndWait</td>\n
+  <td>//select[@name="select_module"]</td>\n
+  <td>Support Requests</td>\n
 </tr>\n
+\n
 <tal:block tal:content="structure python: here.Zuite_generateListboxBrowsing(listbox_selection=([\'title\', here.Zuite_getHowToInfo()[\'incoming_event_howto_ticket_title\']],), enter_object=True)"/>\n
 <tr>\n
   <td>verifyText</td>\n
