@@ -66,9 +66,9 @@
 <span metal:use-macro="container/Zuite_viewTestMacroLibrary/macros/login_as_functional_test_user">Login As Functional Test User</span>\n
 \n
 <tr>\n
-  <td>clickAndWait</td>\n
-  <td>link=Organisations</td>\n
-  <td></td>\n
+  <td>selectAndWait</td>\n
+  <td>//select[@name="select_module"]</td>\n
+  <td>Organisations</td>\n
 </tr>\n
 <tr>\n
   <td>selectAndWait</td>\n
