@@ -71,10 +71,11 @@
   <td></td>\n
 </tr>\n
 <tr>\n
-  <td>clickAndWait</td>\n
-  <td>link=Persons</td>\n
-  <td></td>\n
+  <td>selectAndWait</td>\n
+  <td>//select[@name="select_module"]</td>\n
+  <td>Persons</td>\n
 </tr>\n
+\n
 <tal:block tal:content="structure python: here.Zuite_generateListboxBrowsing(listbox_selection=([\'title\', here.Zuite_getHowToInfo()[\'link_howto_person_title\']],), enter_object=True)"/>\n
 <tr>\n
   <td>assertValue</td>\n
