@@ -1,3 +1,6 @@
+21-03-2011 lucas
+- Tests uses select_module list box instead of front page.
+
 28-01-2011 lucas
 - Fixed testHowToIncomingEvent
 - Fixed testHowToInstanceI18N
